[package]
name = "hls_audio_server"
version = "0.1.0"
edition = "2021"
description = "A hassle free way to serve audio over HLS"
repository = "https://github.com/Orange-Murker/hls_audio_server"
license = "MIT OR Apache-2.0"
keywords = ["HLS", "server", "audio", "live", "streaming"]
categories = ["multimedia::audio", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
hyper = { vesrion = "0.14.27", features = ["server", "http1"] }
m3u8-rs = "5.0.4"
fdk-aac = "0.5.0"
wav = "1.0.0"
byteorder = "1.4.3"
id3 = "1.8.0"
